compiler/frontends/spar/testsuite/errsyntax.err
errsyntax.spar:9: syntax error
    }
    ^
