compiler/frontends/spar/testsuite/errsyntax.spar
// Simple file with a syntax error
// Note the missing ';'

package spar.testsuite;

public class errsyntax {
    public static void main() {
	int n = 3
    }
}
